<resources>
    <string name="app_name">Instagram</string>
    <string name="sign_up_now">Sign Up Now.</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_now">Login Now.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_info">Update Info</string>
    <string name="favourite_sport">Favourite Sport</string>
    <string name="hobbies">Hobbies</string>
    <string name="profession">Profession</string>
    <string name="bio">Bio</string>
    <string name="loading_users">Loading Users</string>
    <string name="please_wait">Please Wait...</string>
    <string name="caption">Caption</string>
    <string name="post_image">Post Image</string>
    <string name="logout">Logout</string>
</resources>
